--- a/components/Header/header.css
+++ b/components/Header/header.css
@@ -25,7 +25,7 @@
   padding: 1rem 1rem;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-between;
 }
 
 @media (min-width: 768px) {
