--- a/components/Hero/hero.css
+++ b/components/Hero/hero.css
@@ -32,7 +32,6 @@
   height: 100%;
   gap: 2rem;
   z-index: 10;
-  color: white;
 }
 
 .hero-title {
@@ -40,6 +39,10 @@
   font-family: var(--font-pixel), monospace;
   text-align: center;
   animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+
+.dark .hero-title {
+  color: white;
 }
 
 @media (min-width: 768px) {
